# arithmetic

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/arithmetic/: __init__.py  arithmetic.py
tests/: test_arithmetic.py
