[project]
name = "arithmetic"
version = "0.1.0"
description = ""
authors = [
    {name = "Victor Guo",email = "guo37@purdue.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "puff (>=0.6,<0.7)",
    "mypy (>=1.18.1,<2.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "ruff (>=0.13.0,<0.14.0)",
    "pre-commit (>=4.3.0,<5.0.0)"
]

[tool.poetry]
name = "arithmetic"
version = "0.1.0"
description = "Toy arithmetic package"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "src/arithmetic" }]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "N", "W", "I", "UP", "B", "D"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D",
    "N802",
    "N803",
    "S101",
    "PLR2004",
]
[tool.ruff.lint.mccabe]
max-complexity = 10
